--- a/index.html
+++ b/index.html
@@ -119,152 +119,164 @@
 
     <canvas id="comparisonChart" width="100%"></canvas>
 
-    <div class="summary" id="summary"></div>
+  <!-- Keep everything the same ABOVE -->
 
-    <footer>
-        Blue = Buy Net Cost | Orange = Rent Cost | Green = Investment Growth<br>
-        Chris Garrard | Veteran-Owned Real Estate
-    </footer>
+<div class="summary" id="summary"></div>
 
-    <script>
-        let chart;
+<footer>
+    Blue = Buy Net Cost | Orange = Rent Cost | Green = Investment Growth<br>
+    Chris Garrard | Veteran-Owned Real Estate
+</footer>
 
-        function formatNumber(num) {
-            return num.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 });
-        }
+<script>
+    let chart;
 
-        function calculate() {
-            const getValue = (id) => parseFloat(document.getElementById(id).value) || 0;
+    function formatNumber(num) {
+        return num.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 });
+    }
 
-            const homePrice = getValue('homePrice');
-            const downPaymentPercent = getValue('downPayment');
-            const interestRateMonthly = getValue('interestRate') / 100 / 12;
-            const growthRate = getValue('growthRate') / 100;
-            const taxType = document.getElementById('taxType').value;
-            const propertyTaxInput = getValue('propertyTaxes');
-            const annualInsurance = getValue('insurance');
-            let monthlyRent = getValue('monthlyRent');
-            const rentIncrease = getValue('rentIncrease') / 100;
-            const years = getValue('years');
-            const annualStockReturn = getValue('investmentReturn') / 100;
-            const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
+    function calculate() {
+        const getValue = (id) => parseFloat(document.getElementById(id).value) || 0;
 
-            const downPayment = homePrice * (downPaymentPercent / 100);
-            const loanAmount = homePrice - downPayment;
-            const monthlyPI = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -30 * 12));
+        const homePrice = getValue('homePrice');
+        const downPaymentPercent = getValue('downPayment');
+        const interestRateMonthly = getValue('interestRate') / 100 / 12;
+        const growthRate = getValue('growthRate') / 100;
+        const taxType = document.getElementById('taxType').value;
+        const propertyTaxInput = getValue('propertyTaxes');
+        const annualInsurance = getValue('insurance');
+        let monthlyRent = getValue('monthlyRent');
+        const rentIncrease = getValue('rentIncrease') / 100;
+        const years = getValue('years');
+        const annualStockReturn = getValue('investmentReturn') / 100;
+        const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
 
-            let monthlyTax = (taxType === 'percent') ? (homePrice * (propertyTaxInput / 100)) / 12 : propertyTaxInput / 12;
-            const monthlyInsurance = annualInsurance / 12;
-            const totalMonthlyMortgage = monthlyPI + monthlyTax + monthlyInsurance;
+        const downPayment = homePrice * (downPaymentPercent / 100);
+        const loanAmount = homePrice - downPayment;
+        const monthlyPI = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -30 * 12));
 
-            let rentPaid = 0;
-            let homeValue = homePrice;
-            let remainingLoan = loanAmount;
-            let futureStockValue = 0;
+        let monthlyTax = (taxType === 'percent') ? (homePrice * (propertyTaxInput / 100)) / 12 : propertyTaxInput / 12;
+        const monthlyInsurance = annualInsurance / 12;
+        const totalMonthlyMortgage = monthlyPI + monthlyTax + monthlyInsurance;
 
-            let rentData = [];
-            let buyData = [];
-            let investData = [];
-            let labels = [];
+        let rentPaid = 0;
+        let homeValue = homePrice;
+        let remainingLoan = loanAmount;
+        let futureStockValue = 0;
 
-            for (let i = 1; i <= years; i++) {
-                rentPaid += monthlyRent * 12;
-                monthlyRent *= (1 + rentIncrease);
-                homeValue *= (1 + growthRate);
+        let rentData = [];
+        let buyData = [];
+        let investData = [];
+        let labels = [];
 
-                remainingLoan = remainingLoan * Math.pow(1 + interestRateMonthly, 12) - (monthlyPI * ((Math.pow(1 + interestRateMonthly, 12) - 1) / interestRateMonthly));
+        for (let i = 1; i <= years; i++) {
+            rentPaid += monthlyRent * 12;
+            monthlyRent *= (1 + rentIncrease);
+            homeValue *= (1 + growthRate);
 
-                const sellingCosts = homeValue * 0.07;
-                const cashAfterSale = homeValue - remainingLoan - sellingCosts;
+            remainingLoan = remainingLoan * Math.pow(1 + interestRateMonthly, 12) - (monthlyPI * ((Math.pow(1 + interestRateMonthly, 12) - 1) / interestRateMonthly));
 
-                const buyNetCost = downPayment + (totalMonthlyMortgage * i * 12) - cashAfterSale;
+            const sellingCosts = homeValue * 0.07;
+            const cashAfterSale = homeValue - remainingLoan - sellingCosts;
 
-                const monthlyDifference = totalMonthlyMortgage - (rentPaid / i / 12);
-                if (monthlyDifference > 0) {
-                    for (let m = 0; m < 12; m++) {
-                        futureStockValue = (futureStockValue + monthlyDifference) * (1 + stockReturnMonthly);
-                    }
+            const buyNetCost = downPayment + (totalMonthlyMortgage * i * 12) - cashAfterSale;
+
+            const monthlyDifference = totalMonthlyMortgage - (rentPaid / i / 12);
+            if (monthlyDifference > 0) {
+                for (let m = 0; m < 12; m++) {
+                    futureStockValue = (futureStockValue + monthlyDifference) * (1 + stockReturnMonthly);
                 }
-
-                rentData.push(rentPaid);
-                buyData.push(buyNetCost);
-                investData.push(futureStockValue);
-                labels.push(i + ' yr');
             }
 
-            updateChart(labels, rentData, buyData, investData);
-
-            const rentFinal = rentData[years - 1];
-            const buyFinal = buyData[years - 1];
-            const diff = rentFinal - buyFinal;
-
-            document.getElementById('summary').innerHTML = `
-                <strong>After ${years} Years:</strong><br>
-                Monthly Mortgage (incl. taxes & insurance): $${formatNumber(totalMonthlyMortgage)}<br>
-                Monthly Rent (Year 1): $${formatNumber(monthlyRent / Math.pow(1 + rentIncrease, years))}<br><br>
-
-                Total Rent Cost Over ${years} Years: $${formatNumber(rentFinal)}<br>
-                Total Buy Net Cost Over ${years} Years: $${formatNumber(buyFinal)}<br>
-                Difference (Rent - Buy): $${formatNumber(diff)}<br><br>
-
-                If you invested the monthly difference, you'd have: $${formatNumber(futureStockValue)}
-            `;
+            rentData.push(rentPaid);
+            buyData.push(buyNetCost);
+            investData.push(futureStockValue);
+            labels.push(i + ' yr');
         }
 
-        function updateChart(labels, rentData, buyData, investData) {
-            const ctx = document.getElementById('comparisonChart').getContext('2d');
-            if (chart) chart.destroy();
+        updateChart(labels, rentData, buyData, investData);
 
-            chart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: labels,
-                    datasets: [
-                        {
-                            label: 'Rent Cost',
-                            data: rentData,
-                            borderColor: '#e67e22',
-                            fill: false,
-                            tension: 0.3
-                        },
-                        {
-                            label: 'Buy Net Cost',
-                            data: buyData,
-                            borderColor: '#2980b9',
-                            fill: false,
-                            tension: 0.3
-                        },
-                        {
-                            label: 'Investment Growth',
-                            data: investData,
-                            borderColor: '#27ae60',
-                            fill: false,
-                            tension: 0.3
-                        }
-                    ]
-                },
-                options: {
-                    responsive: true,
-                    maintainAspectRatio: false,
-                    scales: {
-                        y: {
-                            beginAtZero: true,
-                            ticks: {
-                                callback: function(value) {
-                                    return '$' + value.toLocaleString();
-                                }
+        const rentFinal = rentData[years - 1];
+        const buyFinal = buyData[years - 1];
+        const diff = rentFinal - buyFinal;
+
+        // Final Cash After Selling (Equity in Pocket)
+        const sellingCostsFinal = homeValue * 0.07;
+        const cashAfterSaleFinal = homeValue - remainingLoan - sellingCostsFinal;
+
+        // Net Rent Loss After Investment
+        const netRentLossAfterInvestment = rentFinal - futureStockValue;
+
+        document.getElementById('summary').innerHTML = `
+            <strong>After ${years} Years:</strong><br>
+            Monthly Mortgage (incl. taxes & insurance): $${formatNumber(totalMonthlyMortgage)}<br>
+            Monthly Rent (Year 1): $${formatNumber(monthlyRent / Math.pow(1 + rentIncrease, years))}<br><br>
+
+            Total Rent Cost Over ${years} Years: $${formatNumber(rentFinal)}<br>
+            Total Buy Net Cost Over ${years} Years: $${formatNumber(buyFinal)}<br>
+            Difference (Rent - Buy): $${formatNumber(diff)}<br><br>
+
+            <strong>Money in Pocket After Selling:</strong> $${formatNumber(cashAfterSaleFinal)}<br>
+            <strong>Total Rent Loss:</strong> $${formatNumber(rentFinal)}<br>
+            <strong>Investment Growth:</strong> $${formatNumber(futureStockValue)}<br>
+            <strong>Net Rent Loss After Investment:</strong> $${formatNumber(netRentLossAfterInvestment)}
+        `;
+    }
+
+    function updateChart(labels, rentData, buyData, investData) {
+        const ctx = document.getElementById('comparisonChart').getContext('2d');
+        if (chart) chart.destroy();
+
+        chart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: labels,
+                datasets: [
+                    {
+                        label: 'Rent Cost',
+                        data: rentData,
+                        borderColor: '#e67e22',
+                        fill: false,
+                        tension: 0.3
+                    },
+                    {
+                        label: 'Buy Net Cost',
+                        data: buyData,
+                        borderColor: '#2980b9',
+                        fill: false,
+                        tension: 0.3
+                    },
+                    {
+                        label: 'Investment Growth',
+                        data: investData,
+                        borderColor: '#27ae60',
+                        fill: false,
+                        tension: 0.3
+                    }
+                ]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                scales: {
+                    y: {
+                        beginAtZero: true,
+                        ticks: {
+                            callback: function(value) {
+                                return '$' + value.toLocaleString();
                             }
                         }
                     }
                 }
-            });
-        }
-
-        document.querySelectorAll('input, select').forEach(el => {
-            el.addEventListener('input', calculate);
+            }
         });
-        window.onload = calculate;
-    </script>
+    }
+
+    document.querySelectorAll('input, select').forEach(el => {
+        el.addEventListener('input', calculate);
+    });
+    window.onload = calculate;
+</script>
 
 </body>
 </html>
