--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <input type="number" id="interestRate" value="6.5">
         </div>
         <div class="form-group">
-            <label>Value Growth (%/yr)</label>
+            <label>Annual Appreciation (%/yr)</label>
             <input type="number" id="growthRate" value="2">
         </div>
         <div class="form-group">
