--- a/index.html
+++ b/index.html
@@ -2,58 +2,135 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rent vs Buy Calculator</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <title>Rent vs Buying | Chris Garrard</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            padding: 20px;
-            background-color: #f5f5f5;
-            max-width: 900px;
+            padding: 10px;
+            max-width: 1000px;
             margin: auto;
-        }
-        h2, h3, h4 {
+            background-color: #f7f7f7;
             color: #333;
         }
-        label, input {
-            display: block;
-            margin: 8px 0;
+        h1 {
+            text-align: center;
+            color: #2c3e50;
+            font-size: 22px;
+            margin-bottom: 10px;
         }
-        .results {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            margin-top: 20px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        .form-section {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+        .form-section label {
+            font-size: 13px;
+            font-weight: bold;
+            margin-bottom: 2px;
+            display: block;
+        }
+        .form-section input, .form-section select {
+            width: 100%;
+            padding: 5px;
+            font-size: 13px;
+            border-radius: 3px;
+            border: 1px solid #ccc;
+        }
+        .form-group {
+            width: 48%;
         }
         canvas {
-            margin-top: 20px;
+            margin-top: 10px;
+            max-height: 300px;
+        }
+        .summary {
+            font-size: 14px;
+            background: #fff;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        .summary strong {
+            color: #2980b9;
+        }
+        footer {
+            margin-top: 10px;
+            text-align: center;
+            font-size: 11px;
+            color: #777;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
-    <h2>Rent vs Buy Calculator</h2>
+    <h1>Rent vs Buy Trend Calculator</h1>
 
-    <label>Home Purchase Price: <input type="number" id="homePrice" /></label>
-    <label>Down Payment (%): <input type="number" id="downPayment" /></label>
-    <label>Loan Interest Rate (% per year): <input type="number" id="interestRate" /></label>
-    <label>Loan Term (years): <input type="number" id="loanTerm" /></label>
-    <label>Property Taxes (% per year): <input type="number" id="propertyTaxes" /></label>
-    <label>Annual Insurance Cost: <input type="number" id="insurance" /></label>
-    <label>Annual Home Appreciation (%): <input type="number" id="growthRate" /></label>
-    <label>Monthly Rent: <input type="number" id="monthlyRent" value="1600" /></label>
-    <label>Annual Rent Increase (%): <input type="number" id="rentIncrease" /></label>
-    <label>Number of Years: <input type="number" id="years" /></label>
+    <div class="form-section">
+        <div class="form-group">
+            <label>Home Price ($)</label>
+            <input type="number" id="homePrice" value="300000">
+        </div>
+        <div class="form-group">
+            <label>Down Payment (%)</label>
+            <input type="number" id="downPayment" value="5">
+        </div>
+        <div class="form-group">
+            <label>Interest Rate (%)</label>
+            <input type="number" id="interestRate" value="6.5">
+        </div>
+        <div class="form-group">
+            <label>Value Growth (%/yr)</label>
+            <input type="number" id="growthRate" value="2">
+        </div>
+        <div class="form-group">
+            <label>Property Taxes</label>
+            <input type="number" id="propertyTaxes" value="0.5">
+            <select id="taxType">
+                <option value="percent">Percent</option>
+                <option value="fixed">Fixed $</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Insurance ($ Annual)</label>
+            <input type="number" id="insurance" value="1500">
+        </div>
+        <div class="form-group">
+            <label>Monthly Rent ($)</label>
+            <input type="number" id="monthlyRent" value="1600">
+        </div>
+        <div class="form-group">
+            <label>Rent Increase (%/yr)</label>
+            <input type="number" id="rentIncrease" value="3">
+        </div>
+        <div class="form-group">
+            <label>Years</label>
+            <input type="number" id="years" value="10">
+        </div>
+        <div class="form-group">
+            <label>Investment Return (%/yr)</label>
+            <input type="number" id="investmentReturn" value="7">
+        </div>
+    </div>
 
-    <button onclick="calculate()">Calculate</button>
+    <canvas id="comparisonChart" width="100%"></canvas>
 
-    <div class="results" id="results"></div>
+    <div class="summary" id="summary"></div>
 
-    <canvas id="myChart" width="400" height="200"></canvas>
+    <footer>
+        Blue = Buy Net Cost | Orange = Rent Cost | Green = Investment Growth<br>
+        Chris Garrard | Veteran-Owned Real Estate
+    </footer>
 
     <script>
-        let chartInstance = null;
+        let chart;
+
+        function formatNumber(num) {
+            return num.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 });
+        }
 
         function calculate() {
             const getValue = (id) => parseFloat(document.getElementById(id).value) || 0;
@@ -61,138 +138,144 @@
             const homePrice = getValue('homePrice');
             const downPaymentPercent = getValue('downPayment');
             const interestRateMonthly = getValue('interestRate') / 100 / 12;
-            const loanTermMonths = getValue('loanTerm') * 12;
-            const propertyTaxesPercent = getValue('propertyTaxes') / 100;
-            const insurance = getValue('insurance');
             const growthRate = getValue('growthRate') / 100;
+            const taxType = document.getElementById('taxType').value;
+            const propertyTaxInput = getValue('propertyTaxes');
+            const annualInsurance = getValue('insurance');
             let monthlyRent = getValue('monthlyRent');
             const rentIncrease = getValue('rentIncrease') / 100;
             const years = getValue('years');
-
-            if (!homePrice || !loanTermMonths || !years) {
-                document.getElementById('results').innerHTML = "<strong>Please fill in all values to calculate.</strong>";
-                return;
-            }
+            const annualStockReturn = getValue('investmentReturn') / 100;
+            const stockReturnMonthly = Math.pow(1 + annualStockReturn, 1 / 12) - 1;
 
             const downPayment = homePrice * (downPaymentPercent / 100);
             const loanAmount = homePrice - downPayment;
-            const monthlyTaxes = (homePrice * propertyTaxesPercent) / 12;
-            const monthlyInsurance = insurance / 12;
-            const monthlyPITI = loanAmount * interestRateMonthly * Math.pow(1 + interestRateMonthly, loanTermMonths) / (Math.pow(1 + interestRateMonthly, loanTermMonths) - 1) + monthlyTaxes + monthlyInsurance;
+            const monthlyPI = loanAmount * interestRateMonthly / (1 - Math.pow(1 + interestRateMonthly, -30 * 12));
 
-            // Rent Calculation
-            let totalRentCost = 0;
-            let rentArray = [];
-            let yearsArray = [];
-            let homeWorthArray = [];
-            let investmentArray = [];
-            let homeWorthNow = homePrice;
+            let monthlyTax = (taxType === 'percent') ? (homePrice * (propertyTaxInput / 100)) / 12 : propertyTaxInput / 12;
+            const monthlyInsurance = annualInsurance / 12;
+            const totalMonthlyMortgage = monthlyPI + monthlyTax + monthlyInsurance;
 
-            for (let i = 0; i < years; i++) {
-                totalRentCost += monthlyRent * 12;
-                homeWorthNow *= (1 + growthRate);
-                const investmentGrowth = downPayment * Math.pow(1 + 0.05, i + 1); // Assume 5% annual return on investment
+            let rentPaid = 0;
+            let homeValue = homePrice;
+            let remainingLoan = loanAmount;
+            let futureStockValue = 0;
 
-                rentArray.push(totalRentCost.toFixed(2));
-                homeWorthArray.push(homeWorthNow.toFixed(2));
-                investmentArray.push(investmentGrowth.toFixed(2));
-                yearsArray.push(i + 1);
+            let rentData = [];
+            let buyData = [];
+            let investData = [];
+            let labels = [];
 
+            for (let i = 1; i <= years; i++) {
+                rentPaid += monthlyRent * 12;
                 monthlyRent *= (1 + rentIncrease);
+                homeValue *= (1 + growthRate);
+
+                remainingLoan = remainingLoan * Math.pow(1 + interestRateMonthly, 12) - (monthlyPI * ((Math.pow(1 + interestRateMonthly, 12) - 1) / interestRateMonthly));
+
+                const sellingCosts = homeValue * 0.07;
+                const cashAfterSale = homeValue - remainingLoan - sellingCosts;
+
+                const buyNetCost = downPayment + (totalMonthlyMortgage * i * 12) - cashAfterSale;
+
+                const monthlyDifference = totalMonthlyMortgage - (rentPaid / i / 12);
+                if (monthlyDifference > 0) {
+                    for (let m = 0; m < 12; m++) {
+                        futureStockValue = (futureStockValue + monthlyDifference) * (1 + stockReturnMonthly);
+                    }
+                }
+
+                rentData.push(rentPaid);
+                buyData.push(buyNetCost);
+                investData.push(futureStockValue);
+                labels.push(i + ' yr');
             }
 
-            const homeValueIncrease = homeWorthNow - homePrice;
+            updateChart(labels, rentData, buyData, investData);
 
-            // Selling the Home
-            const monthlyPrincipalAndInterest = monthlyPITI - monthlyTaxes - monthlyInsurance;
-            const numberOfPaymentsMade = years * 12;
+            const rentFinal = rentData[years - 1];
+            const buyFinal = buyData[years - 1];
+            const diff = rentFinal - buyFinal;
 
-            const remainingLoanBalance = loanAmount * Math.pow(1 + interestRateMonthly, loanTermMonths) - (monthlyPrincipalAndInterest * (Math.pow(1 + interestRateMonthly, loanTermMonths) - Math.pow(1 + interestRateMonthly, numberOfPaymentsMade)) / interestRateMonthly);
+            const sellingCostsFinal = homeValue * 0.07;
+            const cashAfterSaleFinal = homeValue - remainingLoan - sellingCostsFinal;
 
-            const sellingCosts = homeWorthNow * 0.07; // Assuming 7% selling costs
-            const moneyInPocketAfterSelling = homeWorthNow - remainingLoanBalance - sellingCosts;
+            const netRentLossAfterInvestment = rentFinal - futureStockValue;
 
-            const investmentGrowthFinal = downPayment * Math.pow(1 + 0.05, years); // Final investment growth
-            const netRentLossAfterInvestment = totalRentCost - investmentGrowthFinal;
-            const rentVsBuyDifference = moneyInPocketAfterSelling - netRentLossAfterInvestment;
+            document.getElementById('summary').innerHTML = `
+                <strong>After ${years} Years:</strong><br>
+                Monthly Mortgage (incl. taxes & insurance): $${formatNumber(totalMonthlyMortgage)}<br>
+                Monthly Rent (Year 1): $${formatNumber(monthlyRent / Math.pow(1 + rentIncrease, years))}<br><br>
 
-            // Display Results
-            document.getElementById('results').innerHTML = `
-                <h3>🏠 Buying vs Renting Summary</h3>
-                <p><strong>Monthly Mortgage (incl. taxes & insurance):</strong> $${monthlyPITI.toFixed(2)}</p>
-                <p><strong>Monthly Rent:</strong> $1,600</p>
+                Total Rent Cost Over ${years} Years: $${formatNumber(rentFinal)}<br>
+                Total Buy Net Cost Over ${years} Years: $${formatNumber(buyFinal)}<br>
+                Difference (Rent - Buy): $${formatNumber(diff)}<br><br>
 
-                <h4>📊 Over ${years} Years:</h4>
-                <p><strong>Total Rent Paid:</strong> $${totalRentCost.toFixed(2)}</p>
-                <p><strong>Purchase Price:</strong> $${homePrice.toFixed(2)}</p>
-                <p><strong>Home Worth After ${years} Years:</strong> $${homeWorthNow.toFixed(2)}</p>
-                <p><strong>Home Value Increase:</strong> $${homeValueIncrease.toFixed(2)}</p>
-
-                <h4>💰 Selling & Proceeds:</h4>
-                <p><strong>Money in Pocket After Selling:</strong> $${moneyInPocketAfterSelling.toFixed(2)}</p>
-
-                <h4>🏠 Renting Summary:</h4>
-                <p><strong>Total Rent Paid (Lost):</strong> $${totalRentCost.toFixed(2)}</p>
-                <p><strong>If You Had Invested Instead:</strong> $${investmentGrowthFinal.toFixed(2)}</p>
-                <p><strong>Net Rent Loss After Investment:</strong> $${netRentLossAfterInvestment.toFixed(2)}</p>
-
-                <h4>📈 Difference (Rent - Buy): $${rentVsBuyDifference.toFixed(2)}</h4>
+                <strong>Money in Pocket After Selling:</strong> $${formatNumber(cashAfterSaleFinal)}<br>
+                <strong>Total Rent Loss:</strong> $${formatNumber(rentFinal)}<br>
+                <strong>Investment Growth:</strong> $${formatNumber(futureStockValue)}<br>
+                <strong>Net Rent Loss After Investment:</strong> $${formatNumber(netRentLossAfterInvestment)}
             `;
+        }
 
-            // Chart
-            if (chartInstance) {
-                chartInstance.destroy();
-            }
+        function updateChart(labels, rentData, buyData, investData) {
+            const ctx = document.getElementById('comparisonChart').getContext('2d');
+            if (chart) chart.destroy();
 
-            const ctx = document.getElementById('myChart').getContext('2d');
-            chartInstance = new Chart(ctx, {
+            chart = new Chart(ctx, {
                 type: 'line',
                 data: {
-                    labels: yearsArray,
+                    labels: labels,
                     datasets: [
                         {
-                            label: 'Total Rent Paid',
-                            data: rentArray,
-                            borderColor: 'blue',
-                            fill: false
+                            label: 'Rent Cost',
+                            data: rentData,
+                            borderColor: '#e67e22',
+                            fill: false,
+                            tension: 0.3
                         },
                         {
-                            label: 'Home Worth',
-                            data: homeWorthArray,
-                            borderColor: 'green',
-                            fill: false
+                            label: 'Buy Net Cost',
+                            data: buyData,
+                            borderColor: '#2980b9',
+                            fill: false,
+                            tension: 0.3
                         },
                         {
                             label: 'Investment Growth',
-                            data: investmentArray,
-                            borderColor: 'orange',
-                            fill: false
+                            data: investData,
+                            borderColor: '#27ae60',
+                            fill: false,
+                            tension: 0.3
                         }
                     ]
                 },
                 options: {
                     responsive: true,
-                    plugins: {
-                        legend: {
-                            position: 'top'
-                        },
-                        title: {
-                            display: true,
-                            text: 'Rent vs Buy Over Time'
-                        }
-                    },
+                    maintainAspectRatio: false,
                     scales: {
                         y: {
-                            beginAtZero: false
+                            beginAtZero: true,
+                            ticks: {
+                                callback: function(value) {
+                                    return '$' + value.toLocaleString();
+                                }
+                            }
                         }
                     }
                 }
             });
         }
+
+        document.querySelectorAll('input, select').forEach(el => {
+            el.addEventListener('input', calculate);
+        });
+        window.onload = calculate;
     </script>
 
 </body>
 </html>
+
 
 
 
